bindings/rust/wasmedge-sys/docs/wasmedge.rs

pub const WasmEdge_ErrCode_Success: WasmEdge_ErrCode = 0;
#[doc = " Exit and return success."]
pub const WasmEdge_ErrCode_Terminated: WasmEdge_ErrCode = 1;
#[doc = " Generic runtime error."]
pub const WasmEdge_ErrCode_RuntimeError: WasmEdge_ErrCode = 2;
#[doc = " Exceeded cost limit (out of gas)."]
pub const WasmEdge_ErrCode_CostLimitExceeded: WasmEdge_ErrCode = 3;
#[doc = " Wrong VM's workflow"]
pub const WasmEdge_ErrCode_WrongVMWorkflow: WasmEdge_ErrCode = 4;
#[doc = " Wasm function not found"]
pub const WasmEdge_ErrCode_FuncNotFound: WasmEdge_ErrCode = 5;
#[doc = " AOT runtime is disabled"]
pub const WasmEdge_ErrCode_AOTDisabled: WasmEdge_ErrCode = 6;
#[doc = " Load phase"]
#[doc = " File not found"]
pub const WasmEdge_ErrCode_InvalidPath: WasmEdge_ErrCode = 32;
#[doc = " Error when reading"]
pub const WasmEdge_ErrCode_ReadError: WasmEdge_ErrCode = 33;
#[doc = " Reach end of file when reading"]
pub const WasmEdge_ErrCode_UnexpectedEnd: WasmEdge_ErrCode = 34;
#[doc = " Not detected magic header"]
pub const WasmEdge_ErrCode_InvalidMagic: WasmEdge_ErrCode = 35;
#[doc = " Unsupported version"]
pub const WasmEdge_ErrCode_InvalidVersion: WasmEdge_ErrCode = 36;
#[doc = " Malformed section ID"]
pub const WasmEdge_ErrCode_InvalidSection: WasmEdge_ErrCode = 37;
#[doc = " Section size mismatched"]
pub const WasmEdge_ErrCode_SectionSizeMismatch: WasmEdge_ErrCode = 38;
#[doc = " Name size out of bounds"]
pub const WasmEdge_ErrCode_NameSizeOutOfBounds: WasmEdge_ErrCode = 39;
#[doc = " Junk sections"]
pub const WasmEdge_ErrCode_JunkSection: WasmEdge_ErrCode = 40;
#[doc = " Incompatible function and code section"]
pub const WasmEdge_ErrCode_IncompatibleFuncCode: WasmEdge_ErrCode = 41;
#[doc = " Incompatible data and datacount section"]
pub const WasmEdge_ErrCode_IncompatibleDataCount: WasmEdge_ErrCode = 42;
#[doc = " Datacount section required"]
pub const WasmEdge_ErrCode_DataCountRequired: WasmEdge_ErrCode = 43;
#[doc = " Malformed import kind"]
pub const WasmEdge_ErrCode_InvalidImportKind: WasmEdge_ErrCode = 44;
#[doc = " Malformed export kind"]
pub const WasmEdge_ErrCode_InvalidExportKind: WasmEdge_ErrCode = 45;
#[doc = " Not loaded an expected zero byte"]
pub const WasmEdge_ErrCode_ExpectedZeroByte: WasmEdge_ErrCode = 46;
#[doc = " Malformed mutability"]
pub const WasmEdge_ErrCode_InvalidMut: WasmEdge_ErrCode = 47;
#[doc = " Local size too large"]
pub const WasmEdge_ErrCode_TooManyLocals: WasmEdge_ErrCode = 48;
#[doc = " Malformed value type"]
pub const WasmEdge_ErrCode_InvalidValType: WasmEdge_ErrCode = 49;
#[doc = " Malformed element type (Bulk-mem proposal)"]
pub const WasmEdge_ErrCode_InvalidElemType: WasmEdge_ErrCode = 50;
#[doc = " Malformed reference type (Ref-types proposal)"]
pub const WasmEdge_ErrCode_InvalidRefType: WasmEdge_ErrCode = 51;
#[doc = " Invalid utf-8 encoding"]
pub const WasmEdge_ErrCode_InvalidUTF8: WasmEdge_ErrCode = 52;
#[doc = " Invalid too large integer"]
pub const WasmEdge_ErrCode_IntegerTooLarge: WasmEdge_ErrCode = 53;
#[doc = " Invalid presentation too long integer"]
pub const WasmEdge_ErrCode_IntegerTooLong: WasmEdge_ErrCode = 54;
#[doc = " Illegal OpCode"]
pub const WasmEdge_ErrCode_InvalidOpCode: WasmEdge_ErrCode = 55;
#[doc = " Parsing error"]
pub const WasmEdge_ErrCode_InvalidGrammar: WasmEdge_ErrCode = 56;
#[doc = " Validation phase"]
#[doc = " Alignment > natural"]
pub const WasmEdge_ErrCode_InvalidAlignment: WasmEdge_ErrCode = 64;
#[doc = " Got unexpected type when checking"]
pub const WasmEdge_ErrCode_TypeCheckFailed: WasmEdge_ErrCode = 65;
#[doc = " Branch to unknown label index"]
pub const WasmEdge_ErrCode_InvalidLabelIdx: WasmEdge_ErrCode = 66;
#[doc = " Access unknown local index"]
pub const WasmEdge_ErrCode_InvalidLocalIdx: WasmEdge_ErrCode = 67;
#[doc = " Type index not defined"]
pub const WasmEdge_ErrCode_InvalidFuncTypeIdx: WasmEdge_ErrCode = 68;
#[doc = " Function index not defined"]
pub const WasmEdge_ErrCode_InvalidFuncIdx: WasmEdge_ErrCode = 69;
#[doc = " Table index not defined"]
pub const WasmEdge_ErrCode_InvalidTableIdx: WasmEdge_ErrCode = 70;
#[doc = " Memory index not defined"]
pub const WasmEdge_ErrCode_InvalidMemoryIdx: WasmEdge_ErrCode = 71;
#[doc = " Global index not defined"]
pub const WasmEdge_ErrCode_InvalidGlobalIdx: WasmEdge_ErrCode = 72;
#[doc = " Element segment index not defined"]
pub const WasmEdge_ErrCode_InvalidElemIdx: WasmEdge_ErrCode = 73;
#[doc = " Data segment index not defined"]
pub const WasmEdge_ErrCode_InvalidDataIdx: WasmEdge_ErrCode = 74;
#[doc = " Undeclared reference"]
pub const WasmEdge_ErrCode_InvalidRefIdx: WasmEdge_ErrCode = 75;
#[doc = " Should be constant expression"]
pub const WasmEdge_ErrCode_ConstExprRequired: WasmEdge_ErrCode = 76;
#[doc = " Export name conflicted"]
pub const WasmEdge_ErrCode_DupExportName: WasmEdge_ErrCode = 77;
#[doc = " Tried to store to const global value"]
pub const WasmEdge_ErrCode_ImmutableGlobal: WasmEdge_ErrCode = 78;
#[doc = " Invalid result arity in select t* instruction"]
pub const WasmEdge_ErrCode_InvalidResultArity: WasmEdge_ErrCode = 79;
#[doc = " #Tables > 1 (without Ref-types proposal)"]
pub const WasmEdge_ErrCode_MultiTables: WasmEdge_ErrCode = 80;
#[doc = " #Memories > 1"]
pub const WasmEdge_ErrCode_MultiMemories: WasmEdge_ErrCode = 81;
#[doc = " Invalid Limit grammar"]
pub const WasmEdge_ErrCode_InvalidLimit: WasmEdge_ErrCode = 82;
#[doc = " Memory pages > 65536"]
pub const WasmEdge_ErrCode_InvalidMemPages: WasmEdge_ErrCode = 83;
#[doc = " Invalid start function signature"]
pub const WasmEdge_ErrCode_InvalidStartFunc: WasmEdge_ErrCode = 84;
#[doc = " Invalid lane index"]
pub const WasmEdge_ErrCode_InvalidLaneIdx: WasmEdge_ErrCode = 85;
#[doc = " Instantiation phase"]
#[doc = " Module name conflicted when importing."]
pub const WasmEdge_ErrCode_ModuleNameConflict: WasmEdge_ErrCode = 96;
#[doc = " Import matching failed"]
pub const WasmEdge_ErrCode_IncompatibleImportType: WasmEdge_ErrCode = 97;
#[doc = " Unknown import instances"]
pub const WasmEdge_ErrCode_UnknownImport: WasmEdge_ErrCode = 98;
#[doc = " Init failed when instantiating data segment"]
pub const WasmEdge_ErrCode_DataSegDoesNotFit: WasmEdge_ErrCode = 99;
#[doc = " Init failed when instantiating element segment"]
pub const WasmEdge_ErrCode_ElemSegDoesNotFit: WasmEdge_ErrCode = 100;
#[doc = " Execution phase"]
#[doc = " Wrong access of instances addresses"]
pub const WasmEdge_ErrCode_WrongInstanceAddress: WasmEdge_ErrCode = 128;
#[doc = " Wrong access of instances indices"]
pub const WasmEdge_ErrCode_WrongInstanceIndex: WasmEdge_ErrCode = 129;
#[doc = " Instruction type not match"]
pub const WasmEdge_ErrCode_InstrTypeMismatch: WasmEdge_ErrCode = 130;
#[doc = " Function signature not match when invoking"]
pub const WasmEdge_ErrCode_FuncSigMismatch: WasmEdge_ErrCode = 131;
#[doc = " Divide by zero"]
pub const WasmEdge_ErrCode_DivideByZero: WasmEdge_ErrCode = 132;
#[doc = " Integer overflow"]
pub const WasmEdge_ErrCode_IntegerOverflow: WasmEdge_ErrCode = 133;
#[doc = " Cannot do convert to integer"]
pub const WasmEdge_ErrCode_InvalidConvToInt: WasmEdge_ErrCode = 134;
#[doc = " Out of bounds table access"]
pub const WasmEdge_ErrCode_TableOutOfBounds: WasmEdge_ErrCode = 135;
#[doc = " Out of bounds memory access"]
pub const WasmEdge_ErrCode_MemoryOutOfBounds: WasmEdge_ErrCode = 136;
#[doc = " Meet an unreachable instruction"]
pub const WasmEdge_ErrCode_Unreachable: WasmEdge_ErrCode = 137;
#[doc = " Uninitialized element in table instance"]
pub const WasmEdge_ErrCode_UninitializedElement: WasmEdge_ErrCode = 138;
#[doc = " Access undefined element in table instances"]
pub const WasmEdge_ErrCode_UndefinedElement: WasmEdge_ErrCode = 139;
#[doc = " Func type mismatch in call_indirect"]
pub const WasmEdge_ErrCode_IndirectCallTypeMismatch: WasmEdge_ErrCode = 140;
#[doc = " Host function execution failed"]
pub const WasmEdge_ErrCode_ExecutionFailed: WasmEdge_ErrCode = 141;
#[doc = " Reference type not match"]
pub const WasmEdge_ErrCode_RefTypeMismatch: WasmEdge_ErrCode = 142;
#[doc = " Error code enumeration."]
pub type WasmEdge_ErrCode = ::std::os::raw::c_uint;
pub const WasmEdge_ValType_I32: WasmEdge_ValType = 127;
pub const WasmEdge_ValType_I64: WasmEdge_ValType = 126;
pub const WasmEdge_ValType_F32: WasmEdge_ValType = 125;
pub const WasmEdge_ValType_F64: WasmEdge_ValType = 124;
pub const WasmEdge_ValType_V128: WasmEdge_ValType = 123;
pub const WasmEdge_ValType_FuncRef: WasmEdge_ValType = 112;
pub const WasmEdge_ValType_ExternRef: WasmEdge_ValType = 111;
#[doc = " WASM Value type enumeration."]
pub type WasmEdge_ValType = ::std::os::raw::c_uint;
pub const WasmEdge_RefType_FuncRef: WasmEdge_RefType = 112;
pub const WasmEdge_RefType_ExternRef: WasmEdge_RefType = 111;
#[doc = " WASM Reference type enumeration."]
pub type WasmEdge_RefType = ::std::os::raw::c_uint;
pub const WasmEdge_Mutability_Const: WasmEdge_Mutability = 0;
pub const WasmEdge_Mutability_Var: WasmEdge_Mutability = 1;
#[doc = " WASM Mutability enumeration."]
pub type WasmEdge_Mutability = ::std::os::raw::c_uint;
#[doc = " WasmEdge WASM value struct."]
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_Value {
    pub Value: u128,
    #[doc = " The value type is used in the parameters of invoking functions. For the"]
    #[doc = " return values of invoking functions, this member will always be"]
    #[doc = " `WasmEdge_ValType_I32`. Users should use APIs to retrieve the WASM"]
    #[doc = " function's `WasmEdge_FunctionTypeContext` to get the actual return list"]
    #[doc = " value types, and then use the corresponding `WasmEdge_ValueGet` functions"]
    #[doc = " to retrieve the value."]
    pub Type: WasmEdge_ValType,
}
#[test]
fn bindgen_test_layout_WasmEdge_Value() {
    assert_eq!(
        ::std::mem::size_of::<WasmEdge_Value>(),
        32usize,
        concat!("Size of: ", stringify!(WasmEdge_Value))
    );
    assert_eq!(
        ::std::mem::align_of::<WasmEdge_Value>(),
        16usize,
        concat!("Alignment of ", stringify!(WasmEdge_Value))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<WasmEdge_Value>())).Value as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(WasmEdge_Value),
            "::",
            stringify!(Value)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<WasmEdge_Value>())).Type as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(WasmEdge_Value),
            "::",
            stringify!(Type)
        )
    );
}
#[doc = " WasmEdge string struct."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_String {
    pub Length: u32,
    pub Buf: *const ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_WasmEdge_String() {
    assert_eq!(
        ::std::mem::size_of::<WasmEdge_String>(),
        16usize,
        concat!("Size of: ", stringify!(WasmEdge_String))
    );
    assert_eq!(
        ::std::mem::align_of::<WasmEdge_String>(),
        8usize,
        concat!("Alignment of ", stringify!(WasmEdge_String))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<WasmEdge_String>())).Length as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(WasmEdge_String),
            "::",
            stringify!(Length)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<WasmEdge_String>())).Buf as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(WasmEdge_String),
            "::",
            stringify!(Buf)
        )
    );
}
#[doc = " Opaque struct of WASM execution result."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WasmEdge_Result {
    pub Code: u8,
}
